--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <video autoplay muted loop id="background-video">
+    <video autoplay muted loop id="background-video"playsinline>
         <source src="japanese.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
